syntax = "proto3";

package rpc;
option go_package = "github.com/ISSuh/sos/internal/infrastructure/transport/rpc";

import "google/protobuf/empty.proto";
import "metadata.proto";

service MetadataRegistry {
  rpc Create(Metadata) returns (Metadata) {}
  rpc GetByObjectName(MetadataFindRequest) returns (Metadata) {}
  rpc GenerateNewObjectID(google.protobuf.Empty) returns (Metadata.ObjectID) {}
}
